atlantis/test-atlantis-pod.yaml
# Source: atlantis/templates/tests/test-atlantis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "atlantis-ui-test-r0sdl"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: atlantis-ui-test
      image: lachlanevenson/k8s-kubectl:v1.4.8-bash
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
      - mountPath: /tests
        name: tests
        readOnly: true
      - mountPath: /tools
        name: tools
  volumes:
  - name: tests
    configMap:
      name: atlantis-tests
  - name: tools
    emptyDir: {}
  restartPolicy: Never
