atlantis/service.yaml
# Source: atlantis/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlantis
  labels:
    app: atlantis
    chart: atlantis-3.12.4
    release: atlantis
    heritage: Helm
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 4141
      protocol: TCP
      name: atlantis
  selector:
    app: atlantis
    release: atlantis
---
