atlantis/ingress.yaml
# Source: atlantis/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: atlantis
  labels:
    app: atlantis
    chart: atlantis-3.12.4
    release: atlantis
    heritage: Helm
spec:
  rules:
    - host: chart-example.local
      http:
        paths:
          - path: /
            backend:
              serviceName: atlantis
              servicePort: 80
---
